5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1671_1104.log
== TEST (2019-04-23 13:27:05) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (b < a) and (d < c):
	print("Entradas invalidas")
elif (a >= c and a <= d):
	print("Ha intersecao")
elif (b >= c and b <= d):
	print("Ha intersecao")
elif (c >= a and c <= b):
	print("Ha intersecao")
elif (d >= a and d <= b):
	print("Ha intersecao")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 13:27:07) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (b < a) and (d < c):
	print("Entradas invalidas")
elif (a >= c and a <= d):
	print("Ha intersecao")
elif (b >= c and b <= d):
	print("Ha intersecao")
elif (c >= a and c <= b):
	print("Ha intersecao")
elif (d >= a and d <= b):
	print("Ha intersecao")
-- EXECUTION TIME:
0.202539
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:27:08) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (b < a) and (d < c):
	print("Entradas invalidas")
elif (a >= c and a <= d):
	print("Ha intersecao")
elif (b >= c and b <= d):
	print("Ha intersecao")
elif (c >= a and c <= b):
	print("Ha intersecao")
elif (d >= a and d <= b):
	print("Ha intersecao")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:28:35) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (b < a) and (d < c):
	print("Entradas invalidas")
elif (a >= c and a <= d):
	print("Ha intersecao")
elif (b >= c and b <= d):
	print("Ha intersecao")
elif (c >= a and c <= b):
	print("Ha intersecao")
elif (d >= a and d <= b):
	print("Ha intersecao")
else:
	print("Nao ha intersecao")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 13:28:36) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (b < a) and (d < c):
	print("Entradas invalidas")
elif (a >= c and a <= d):
	print("Ha intersecao")
elif (b >= c and b <= d):
	print("Ha intersecao")
elif (c >= a and c <= b):
	print("Ha intersecao")
elif (d >= a and d <= b):
	print("Ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.152326
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:28:38) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (b < a) and (d < c):
	print("Entradas invalidas")
elif (a >= c and a <= d):
	print("Ha intersecao")
elif (b >= c and b <= d):
	print("Ha intersecao")
elif (c >= a and c <= b):
	print("Ha intersecao")
elif (d >= a and d <= b):
	print("Ha intersecao")
else:
	print("Nao ha intersecao")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 13:29:36) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (b < a) and (d < c):
	print("Entradas invalidas")
elif (a >= c and a <= d):
	print("Ha intersecao")
elif (b >= c and b <= d):
	print("Ha intersecao")
elif (c >= a and c <= b):
	print("Ha intersecao")
elif (d >= a and d <= b):
	print("Ha intersecao"):
		else:
			print("Nao ha intersecao")
-- EXECUTION TIME:
0.175474
-- ERROR:
  File "/home/codebench/codes/1671/1104/main.py", line 18
    print("Ha intersecao"):
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 13:30:16) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (b < a) and (d < c):
	print("Entradas invalidas")
else:
	if (a >= c and a <= d):
		print("Ha intersecao")
   elif (b >= c and b <= d):
		print("Ha intersecao")
   elif (c >= a and c <= b):
		print("Ha intersecao")
   elif (d >= a and d <= b):
		print("Ha intersecao"):
	else:
		print("Nao ha intersecao")
-- EXECUTION TIME:
0.234807
-- ERROR:
  File "/home/codebench/codes/1671/1104/main.py", line 14
    elif (b >= c and b <= d):
                            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:30:22) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (b < a) and (d < c):
	print("Entradas invalidas")
else:
	if (a >= c and a <= d):
		print("Ha intersecao")
   elif (b >= c and b <= d):
		print("Ha intersecao")
   elif (c >= a and c <= b):
		print("Ha intersecao")
   elif (d >= a and d <= b):
		print("Ha intersecao"):
	else:
		print("Nao ha intersecao")
-- ERROR:
File "XXXX", line 14
    elif (b >= c and b <= d):
                            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:31:12) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (b < a) and (d < c):
	print("Entradas invalidas")
else:
	if (a >= c and a <= d):
		print("Ha intersecao")
   elif (b >= c and b <= d):
		print("Ha intersecao")
   elif (c >= a and c <= b):
		print("Ha intersecao")
   elif (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
-- ERROR:
File "XXXX", line 14
    elif (b >= c and b <= d):
                            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:31:33) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (b < a) and (d < c):
	print("Entradas invalidas")
else:
	if (a >= c and a <= d):
		print("Ha intersecao")
   elif(b >= c and b <= d):
		print("Ha intersecao")
   elif (c >= a and c <= b):
		print("Ha intersecao")
   elif (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
-- ERROR:
File "XXXX", line 14
    elif(b >= c and b <= d):
                           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:32:10) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (b < a) and (d < c):
	print("Entradas invalidas")
else:
	if ((a >= c) and (a <= d)):
		print("Ha intersecao")
   elif((b >= c) and (b <= d)):
		print("Ha intersecao")
   elif (c >= a and c <= b):
		print("Ha intersecao")
   elif (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
-- ERROR:
File "XXXX", line 14
    elif((b >= c) and (b <= d)):
                               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:38:34) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (not(b > a) and (d > c)):
	print("Entradas invalidas")
else:
	if ((a >= c) and (a <= d)):
		print("Ha intersecao")
   elif((b >= c) and (b <= d)):
		print("Ha intersecao")
   elif (c >= a and c <= b):
		print("Ha intersecao")
   elif (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
-- ERROR:
File "XXXX", line 14
    elif((b >= c) and (b <= d)):
                               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:40:35) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (not(b > a) and (d > c)):
	print("Entradas invalidas")
else:
	if ((a >= c) and (a <= d)):
		print("Ha intersecao")
   elif ((b >= c) and (b <= d)):
		print("Ha intersecao")
   elif (c >= a and c <= b):
		print("Ha intersecao")
   elif (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
-- ERROR:
File "XXXX", line 14
    elif ((b >= c) and (b <= d)):
                                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:40:35) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (not(b > a) and (d > c)):
	print("Entradas invalidas")
else:
	if ((a >= c) and (a <= d)):
		print("Ha intersecao")
   elif ((b >= c) and (b <= d)):
		print("Ha intersecao")
   elif (c >= a and c <= b):
		print("Ha intersecao")
   elif (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
-- ERROR:
File "XXXX", line 14
    elif ((b >= c) and (b <= d)):
                                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:40:37) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (not(b > a) and (d > c)):
	print("Entradas invalidas")
else:
	if ((a >= c) and (a <= d)):
		print("Ha intersecao")
   elif ((b >= c) and (b <= d)):
		print("Ha intersecao")
   elif (c >= a and c <= b):
		print("Ha intersecao")
   elif (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
-- ERROR:
File "XXXX", line 14
    elif ((b >= c) and (b <= d)):
                                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:41:11) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (not(b > a) and (d > c)):
	print("Entradas invalidas")
else:
	if ((a >= c) and (a <= d)):
		print("Ha intersecao")
   elif ((b >= c) and (b <= d)):
		print("Ha intersecao")
   elif ((c >= a) and (c <= b)):
		print("Ha intersecao")
   elif (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
-- ERROR:
File "XXXX", line 14
    elif ((b >= c) and (b <= d)):
                                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:42:56) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (b > a) and (d > c):
	if ((a >= c) and (a <= d)):
		print("Ha intersecao")
   elif ((b >= c) and (b <= d)):
		print("Ha intersecao")
   elif ((c >= a) and (c <= b)):
		print("Ha intersecao")
   elif (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")

else:
		print("Entradas invalidas")
	
-- ERROR:
File "XXXX", line 12
    elif ((b >= c) and (b <= d)):
                                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:43:33) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (b > a) and (d > c):
	if (a >= c) and (a <= d):
		print("Ha intersecao")
   elif (b >= c) and (b <= d):
		print("Ha intersecao")
   elif (c >= a) and (c <= b):
		print("Ha intersecao")
   elif (d >= a) and (d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")

else:
		print("Entradas invalidas")
	
-- ERROR:
File "XXXX", line 12
    elif (b >= c) and (b <= d):
                              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:12:39) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)

if (b > a) and (d > c):
	if (a >= c) and (a <= d):
		print("Ha intersecao")
   elif (b >= c) and (b <= d):
		print("Ha intersecao")
   elif (c >= a) and (c <= b):
		print("Ha intersecao")
   elif (d >= a) and (d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")

else:
		print("Entradas invalidas")
	
-- ERROR:
File "XXXX", line 12
    elif (b >= c) and (b <= d):
                              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:22:44) 
-- CODE:
# Entradas
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
# Saidas pt.1
print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)
# Condicoes
if (b > a) and (d > c):
	if (a >= c) and (a <= d) or (b >= c) and (b <= d):
		print("Ha intersecao")
	elif (c >= a) and (c <= b) or (d >= a) and (d <= b):
		print("Ha intersecao")
	else: 
		print("Nao há intersecao")
else:
	print("Entradas invalidas")

-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao há intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:23:48) 
-- CODE:
# Entradas
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
# Saidas pt.1
print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)
# Condicoes
if (b > a) and (d > c):
	if (a >= c) and (a <= d) or (b >= c) and (b <= d):
		print("Ha intersecao")
	elif (c >= a) and (c <= b) or (d >= a) and (d <= b):
		print("Ha intersecao")
	else: 
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")

-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 21:24:13) 
-- CODE:
# Entradas
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
# Saidas pt.1
print("Intervalo 1: ", a, ",", b)
print("Intervalo 2: ", c, ",", d)
# Condicoes
if (b > a) and (d > c):
	if (a >= c) and (a <= d) or (b >= c) and (b <= d):
		print("Ha intersecao")
	elif (c >= a) and (c <= b) or (d >= a) and (d <= b):
		print("Ha intersecao")
	else: 
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")

-- EXECUTION TIME:
0.216052
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Entradas invalidas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
